@startuml

hide circle

note as Contraintes
    Contraintes Globales:
    *Tous les attributs
      sont NOT NULL,
      en cas contraire
      sera marque
      dans chaque table.
end note

class Client{
  nom : string
  prenom : string
  date_naissance : date
  adresse : string
  num_telephone : int
}
note left:num_telephone est\ncomposé de 10 ciffres

class Espece{
  nom_espece : string
  class_espece : string
}

class Animal{
  nom: string
  date_naissance : date
}
note right: date_naissance \npeut-etre NULL

class Traitement{
  date_debut : date
}

class Medicament{
  nom_molecule : string {key}
  duree : int
	doseXjour : float
}
note right:(duree,doseXjour)>0

class Taille_poids{
  dateC : date
  taille : float
  poids : float
}

Animal "1..*" -- "1" Espece : est de type >
Animal "1" -- "*" Traitement : suit >
Traitement "*" o-- "1..*" Medicament : contient >
Client "1" -- "*" Animal : possède
Taille_poids "*" --* "1" Animal



@enduml
